--- a/index.html
+++ b/index.html
@@ -4,10 +4,23 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <link rel="stylesheet" href="style.css" />
+    <title>Github Searcher</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div class="container">
+      <h1>Github Search Profiler</h1>
+      <div class="searchBar">
+        <input
+          id="searchInput"
+          type="text"
+          placeholder="Enter a Github Username"
+        />
+        <button>Search</button>
+      </div>
+      <div class="details" id="result"></div>
+    </div>
+
     <script type="module" src="/main.js"></script>
   </body>
 </html>
