--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./public/icons8-github-100.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <title>Github Searcher</title>
   </head>
   <body>
     <div class="container">
-      <h1>Github Search Profiler</h1>
+      <h1>Github Serach Profiler</h1>
       <div class="searchBar">
         <input
           id="searchInput"
